[gd_scene load_steps=14 format=3 uid="uid://bihahrieyujux"]

[ext_resource type="Script" path="res://enemies/enemy5.gd" id="1_pdhxp"]
[ext_resource type="Texture2D" uid="uid://dnyje88328yq" path="res://assets/enemy5_1.png" id="3_6flao"]
[ext_resource type="AudioStream" uid="uid://0c1dw5l0p4mh" path="res://assets/poultry-shears-99779.wav" id="3_cw03j"]
[ext_resource type="AudioStream" uid="uid://cbyyyroawmd0d" path="res://assets/paper-rip-slow-252618.mp3" id="4_k8io6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7tu6s"]
atlas = ExtResource("3_6flao")
region = Rect2(3, 63, 58, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x8ur"]
atlas = ExtResource("3_6flao")
region = Rect2(61, 63, 58, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5gox"]
atlas = ExtResource("3_6flao")
region = Rect2(0, 0, 58, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ce3s"]
atlas = ExtResource("3_6flao")
region = Rect2(58, 0, 58, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed5qm"]
atlas = ExtResource("3_6flao")
region = Rect2(119, 0, 58, 63)

[sub_resource type="SpriteFrames" id="SpriteFrames_gjk7j"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_7tu6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x8ur")
}],
"loop": true,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5gox")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5gox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ce3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5gox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed5qm")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpqxr"]
size = Vector2(19, 56)

[sub_resource type="CircleShape2D" id="CircleShape2D_oh651"]
radius = 200.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvcjo"]
size = Vector2(27, 60)

[node name="Enemy5" type="CharacterBody2D"]
z_index = 10
collision_layer = 2
script = ExtResource("1_pdhxp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gjk7j")
animation = &"attack"
frame_progress = 0.268551

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_cpqxr")

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_oh651")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(15.5, 1)
shape = SubResource("RectangleShape2D_lvcjo")
debug_color = Color(0.821485, 0.40029, 0.0748016, 0.42)

[node name="AttackCooldown" type="Timer" parent="."]

[node name="DamageTaken" type="Label" parent="."]
z_index = 40
offset_left = -8.0
offset_top = -55.0
offset_right = 32.0
offset_bottom = -32.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "-1"

[node name="DamageDisplayTimer" type="Timer" parent="DamageTaken"]
wait_time = 0.1

[node name="HealthBar" type="ColorRect" parent="."]
z_index = 20
offset_left = -30.0
offset_top = -38.0
offset_right = 30.0
offset_bottom = -33.0
color = Color(0.339735, 6.22692e-07, 1.08294e-07, 0.588235)

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_cw03j")
volume_db = -10.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_k8io6")

[node name="HitTimer" type="Timer" parent="."]

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_player_attack_range_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_player_attack_range_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="DamageTaken/DamageDisplayTimer" to="." method="_on_damage_display_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
